# openblas_practice

./: CMakeLists.txt  README.md  test2.cc
